--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 h1{
-    color:"blue";
+    color:blue;
     font-family:"verdana";
 }
 
 h3{
-    color:"red";
-    font-size:18px;
+    color:red;
+    font-size:12px;
 }
