--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ li a {
     padding: 1%;
 }
 #mugContainer2{
-    background-color: red;
+    background-color: lightseagreen;
     width:30%;
     display: inline-block;
     margin: 1%;
