--- a/style.css
+++ b/style.css
@@ -79,7 +79,8 @@ li a {
 }
 #mugContainer3{
     background-color: blue;
-    width:28%;
+    width:29%;
+    height:30%;
     float: right;
     margin: 1%;
     padding: 1%;
