--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ li a {
 #mugContainer3{
     background-color: blue;
     width:29%;
-    height:59%;
+    height:500px;
     float: right;
     margin: 1%;
     padding: 1%;
