--- a/Week5/style.css
+++ b/Week5/style.css
@@ -44,8 +44,8 @@ head{
 
 main{
     font-family: Indie Flower;
-    display: flex;
-    display: -webkit-flex
+    /*display: flex;
+    display: -webkit-flex*/
 }
 
 ul {
