--- a/Week11/style.css
+++ b/Week11/style.css
@@ -4,6 +4,11 @@
 header{
 
 }
+#maincontent{
+    max-width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 ul{
     list-style-type: none;
